add event for menubar
add click/mouseover/mouseout event for menubar

--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@ body{min-width: 320px;}
 				</div>
 			</div>
 			<div class="menuBar" id="float_menubar">
-				<div class="menuBarQuater" onmouseover="">
+				<div class="menuBarQuater">
 					<div class="menuBarText">
 						<p>About me</p>
 						<p>About</p>
@@ -94,7 +94,7 @@ body{min-width: 320px;}
 						<a href="#myIntro">Who am I?</a>
 					</div>
 				</div>
-				<div class="menuBarQuater" onmouseover="">
+				<div class="menuBarQuater">
 					<div class="menuBarText">
 						<p>My skills</p>
 						<p>Skills</p>
@@ -103,7 +103,7 @@ body{min-width: 320px;}
 						<a href="#mySkills">What I can do</a>
 					</div>
 				</div>
-				<div class="menuBarQuater" onmouseover="">
+				<div class="menuBarQuater">
 					<div class="menuBarText">
 						<p>My Portfolio</p>
 						<p>Portfolio</p>
@@ -112,7 +112,7 @@ body{min-width: 320px;}
 						<a href="#myPortfolio">Projects accomplished</a>
 					</div>
 				</div>
-				<div class="menuBarQuater" onmouseover="">
+				<div class="menuBarQuater">
 					<div class="menuBarText">
 						<p>Contact Me</p>
 						<p>Contact</p>
