change #lower height

--- a/xiaomi-clock.html
+++ b/xiaomi-clock.html
@@ -57,7 +57,7 @@ body{
   width: 17%;
 }
 #lower{
-  height: auto;
+  height: 340px;
   overflow:hidden;
 }
 .pure-css-clock{
@@ -358,7 +358,6 @@ window.onload = function(){
     lower_div[0].style.display = "none";
     clearTimeout(t);
     clock_seconds.style = "";
-    clock_seconds.innerHTML = "";
     lower_div[2].style.display = "none";
     lower_div[3].style.display = "none";
     lower_div[1].style.display = "block";
@@ -371,7 +370,6 @@ window.onload = function(){
     lower_div[0].style.display = "none";
     clearTimeout(t);
     clock_seconds.style = "";
-    clock_seconds.innerHTML = "";
     lower_div[1].style.display = "none";
     lower_div[3].style.display = "none";
     lower_div[2].style.display = "block";
@@ -384,7 +382,6 @@ window.onload = function(){
     lower_div[0].style.display = "none";
     clearTimeout(t);
     clock_seconds.style = "";
-    clock_seconds.innerHTML = "";
     lower_div[1].style.display = "none";
     lower_div[2].style.display = "none";
     lower_div[3].style.display = "block";
