--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@ body{min-width: 320px;}
 				</div>
 			</div>
 			<div class="menuBar" id="float_menubar">
-				<div class="menuBarQuater">
+				<div class="menuBarQuater" onmouseover="">
 					<div class="menuBarText">
 						<p>About me</p>
 						<p>About</p>
@@ -94,7 +94,7 @@ body{min-width: 320px;}
 						<a href="#myIntro">Who am I?</a>
 					</div>
 				</div>
-				<div class="menuBarQuater">
+				<div class="menuBarQuater" onmouseover="">
 					<div class="menuBarText">
 						<p>My skills</p>
 						<p>Skills</p>
@@ -103,7 +103,7 @@ body{min-width: 320px;}
 						<a href="#mySkills">What I can do</a>
 					</div>
 				</div>
-				<div class="menuBarQuater">
+				<div class="menuBarQuater" onmouseover="">
 					<div class="menuBarText">
 						<p>My Portfolio</p>
 						<p>Portfolio</p>
@@ -112,7 +112,7 @@ body{min-width: 320px;}
 						<a href="#myPortfolio">Projects accomplished</a>
 					</div>
 				</div>
-				<div class="menuBarQuater">
+				<div class="menuBarQuater" onmouseover="">
 					<div class="menuBarText">
 						<p>Contact Me</p>
 						<p>Contact</p>
@@ -132,7 +132,7 @@ body{min-width: 320px;}
 						<div class="row myIntro_text">
 							<div class="col-sm-8 col-md-8">
 								<div class="thumbnail" style="margin-bottom: 0px;">
-									<img class="img-responsive" src="./photo/index-04.jpg" alt="picture of me" title="picture of me"/>
+									<img class="img-responsive" src="https://www.houzhenni.com/myapp/photo/index-04.jpg" alt="picture of me" title="picture of me"/>
 								</div>
 							</div>
 							<div class="col-sm-4 col-md-4">
@@ -179,7 +179,7 @@ body{min-width: 320px;}
 						<div class="row myIntro_text">
 							<div class="col-sm-8 col-md-8">
 								<div class="thumbnail" style="margin-bottom: 0px;">
-									<img class="img-responsive" src="photo/front-end-languages.jpg" alt="programming languages" title="programming languages"/>
+									<img class="img-responsive" src="https://www.houzhenni.com/myapp/photo/front-end-languages.jpg" alt="programming languages" title="programming languages"/>
 								</div>
 							</div>
 							<div class="col-sm-4 col-md-4">
@@ -205,26 +205,28 @@ body{min-width: 320px;}
 						<h3>My Portfolio</h3>
 						<div class="myPortfolio">
 							<div class="thumbnail">
-								<a href="dailyreport.html" target="_blank">
+								<a href="https://www.houzhenni.com/myapp/dailyreport.html" target="_blank">
 									<img class="img-responsive" src="https://s1.ax1x.com/2018/03/31/9xRgV1.jpg" alt="one page application for work report" title="one page application for work report"/>
 								</a>
 							</div>
 							<div class="thumbnail">
-								<a href="wikipage.html" target="_blank">
+								<a href="https://www.houzhenni.com/myapp/wikipage.html" target="_blank">
 									<img class="img-responsive" src="https://s1.ax1x.com/2018/03/31/9xR08U.png" alt="Wikipedia Viewer" title="Wikipedia Viewer"/>
 								</a>
 							</div>
 							<div class="thumbnail">
-								<a href="randomquote.html" target="_blank">
+								<a href="https://www.houzhenni.com/myapp/randomquote.html" target="_blank">
 									<img class="img-responsive" src="https://s1.ax1x.com/2017/12/24/vmUP0.png" alt="Random Quote Machine: Criminal Minds Season 3 Quotes" title="Random Quote Machine: Criminal Minds Season 3 Quotes"/>
 								</a>
 							</div>
 							<div class="thumbnail">
-								<a href="calculator.html" target="_blank">
+								<a href="https://www.houzhenni.com/myapp/calculator.html" target="_blank">
 									<img class="img-responsive" src="https://s1.ax1x.com/2017/12/24/vmt5q.png" alt="JavaScript Calculator" title="JavaScript Calculator"/>
 								</a>
 							</div>
-						</div>
+        </div>
+        <div>Or click <a href="https://www.houzhenni.com/myapp" target="_blank">here</a> for more projects</div>
+        <p></p>
 					</div>
 					<p id="myContact">&nbsp;</p>
 					<p>&nbsp;</p>
