--- a/image-size-checker.html
+++ b/image-size-checker.html
@@ -33,7 +33,7 @@ html, body{
 <body translate="no" >
 <div id="container">
 	<h3>Image Size Checker for eBay</h3>
-	<h5>As we all know, eBay has certain requirements for product pictures, so I designed this to check whether the product pictures have met eBay's requirements.</h5>
+	<h5>eBay require sellers to use pictures bigger than 500 x 500 px, check if your pics are qualified here</h5>
 	<p>How to check:<br>
 		Seperate your image URLs with ";"(semicolon) or white space, both are acceptable.<br>
 		Put your URLs in the box and press "Get Size".<br>
