--- a/image-size-checker.html
+++ b/image-size-checker.html
@@ -71,6 +71,9 @@ getSize.onclick = function(){
 		}
 	}
 	imgSrc = tempArr;
+	if(imgSrc.length == 0){
+		return;
+	}
 	let i = 0;
 
 	function iterateImg(){
