add blur event for enter

--- a/image-size-checker.html
+++ b/image-size-checker.html
@@ -58,6 +58,7 @@ var getSize = document.getElementById("getSize");
 myImg.onkeydown = function(e){
 	if(e.keyCode == 13){
 		getSize.click();
+		this.blur();
 	}
 }
 var imgOutput = document.getElementById("imgOutput");
