--- a/dailyreport.html
+++ b/dailyreport.html
@@ -3,6 +3,7 @@
 <html lang="zh">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<title>客服工作日志</title>
 	<style>
