--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href='https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css'>
 <style>
 body{
-	margin: 0px;
+	margin: 0px auto;
 	min-width: 320px;
 }
 .flex-album{
