--- a/clock.html
+++ b/clock.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0"
       http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Wikipedia Viewer</title>
+<title>Clock width weird hands</title>
 
 <style>
 html, body{
