mobile version debug

--- a/minesweeper-vue.html
+++ b/minesweeper-vue.html
@@ -125,7 +125,7 @@
 	    							<div class="stand"></div>
 	    						</div>
 	    					</div>
-	    					<div style="line-height: 32px; width: 150px;">按一下可标记地雷，要取消就再按一下</div>
+	    					<div style="line-height: 32px; width: 150px;">按下可标记地雷</div>
     					</div>
     					<div style="display: flex; justify-content: left;">
     						<div class="counterOuter" style="width: 28px; margin-right: 30px;">
