--- a/minesweeper-vue.html
+++ b/minesweeper-vue.html
@@ -4,8 +4,9 @@
 	    <meta charset="utf-8" />
 	    <meta name="apple-mobile-web-app-capable" content="yes" />
 	    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	    <title>MineSweeper - 扫雷</title>
+	    <title>Minesweeper - 扫雷(VueJS版)</title>
 	    <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
+	    <meta name="description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." /><meta property="og:description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." />
 	    <link href="minesweeper-vue.css" rel="stylesheet" type="text/css" />
 	</head>
     <body>
