--- a/carousel-vue.html
+++ b/carousel-vue.html
@@ -4,27 +4,17 @@
 	    <meta charset="utf-8" />
 	    <meta name="apple-mobile-web-app-capable" content="yes" />
 	    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	    <title>Minesweeper - 扫雷(VueJS版)</title>
+	    <title>carousel - Vue</title>
 	    <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
 	    <meta name="description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." /><meta property="og:description" content="A Vue powered minesweeper game. Responsive design with classic Windows look." />
-	    <link href="spa-vue.css" rel="stylesheet" type="text/css" />
+	    <link href="carousel-vue.css" rel="stylesheet" type="text/css" />
 	</head>
     <body>
     	<div id="app" v-cloak>
-    		<!-- <div :class="{'mask-layer': slide_visible}"></div> -->
-    		<div class="slide-container" :class="{'hidden': !slide_visible}" @mouseover="slide_clear_play" @mouseleave="slide_resume_play">
+    		<div class="slide-container" @mouseover="slide_clear_play" @mouseleave="slide_resume_play">
     			<div class="slides">
-    				<div class="slide-general" :class="slides_class[0]">
-    					<img src="C:\Users\HZN\Pictures\我的网站图片\my app captures\640x480\calculator.png"/>
-    				</div>
-    				<div class="slide-general" :class="slides_class[1]">
-    					<img src="C:\Users\HZN\Pictures\我的网站图片\my app captures\640x480\image-size-checker.png"/>
-    				</div>
-    				<div class="slide-general" :class="slides_class[2]">
-    					<img src="C:\Users\HZN\Pictures\我的网站图片\my app captures\640x480\minesweeper.png"/>
-    				</div>
-    				<div class="slide-general" :class="slides_class[3]">
-    					<img src="C:\Users\HZN\Pictures\我的网站图片\my app captures\640x480\order-form.png"/>
+    				<div class="slide-general" v-for="pic, index in slides_pics"  :class="slides_class[index]">
+    					<img :src="pic"/>
     				</div>
     			</div>
     			<div class="slide-to-left" @click="slide_to_left(curr_slide)">&lt;</div>
@@ -32,6 +22,6 @@
     		</div>
     	</div>
 	    <script src='vue.min.js'></script>
-	    <script src='spa-vue.js'></script>
+	    <script src='carousel-vue.js'></script>
   	</body>
 </html>
