--- a/resume-vue.html
+++ b/resume-vue.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Jenny's resume</title>
-  <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-  <link rel='stylesheet' href='resume-vue.css'>
-</head>
-
-<body>
-  <div id="app"></div>
-  
-<script src='vue.min.js'></script>
-<script src='vue-resource.min.js'></script>
-<script src='resume-vue.js'></script>
-</body>
-
+	<head>
+		<meta charset="UTF-8">
+		<title>Jenny's resume</title>
+		<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+		<link rel='stylesheet' href='resume-vue.css'>
+	</head>
+	<body>
+		<div id="app" v-cloak>
+			<div class="container">
+				<div v-for="item, index in my_resume.section_order">
+					{{item}}
+				</div>
+			</div>
+		</div>
+		<script src='vue.min.js'></script>
+		<script src='vue-resource.min.js'></script>
+		<script src='resume-vue.js'></script>
+	</body>
 </html>
- 
